CDNスクリプトを fflate.min.js に変更する：

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       button{padding:10px 16px;border-radius:10px;border:1px solid #d1d5db;background:#fff;cursor:pointer}
       button:hover{background:#f9fafb}
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.1/umd/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.1/umd/fflate.min.js"></script>
   </head>
   <body>
     <div class="wrap">
