--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </style>
 
     <!-- fflate のCDN（本命） -->
-    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.1/umd/fflate.min.js"></script>
+     <script src="https://unpkg.com/fflate@0.8.2"></script>
+     <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
     <!-- 読み込み失敗時のフォールバック -->
     <script>
       (function(){
