--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       button:hover{background:#f9fafb}
     </style>
 
-    <script src="./assets/fflate.min.js?v=1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
+    <!-- <script src="./assets/fflate.min.js?v=1"></script> -->
 
   </head>
   <body>
