--- a/index.html
+++ b/index.html
@@ -62,8 +62,19 @@
         try{
           const buf = new Uint8Array(await file.arrayBuffer());
           // ここで fflate が使えることを想定
-          fflate.unzip(buf, (err, data) => {
-            if(err){ status.textContent = '解凍に失敗: ' + err; return; }
+          fflate.unzip(buf, {
+                // ファイル名に使うデコーダ
+                stringDecoder: (bytes) => {
+                try {
+                    // UTF-8優先、失敗したらShift_JISで解釈
+                    return new TextDecoder('utf-8').decode(bytes);
+                } catch {
+                    return new TextDecoder('shift_jis').decode(bytes);
+                }
+                }
+            }, (err, data) => {
+                if(err){ status.textContent = '解凍に失敗: ' + err; return; }
+
             const entries = Object.entries(data).sort((a,b)=>a[0].localeCompare(b[0]));
             status.textContent = `展開完了：${entries.length} 件`;
             for(const [name, bytes] of entries){
