--- a/index.html
+++ b/index.html
@@ -61,20 +61,19 @@
         list.innerHTML = ''; status.textContent = '解凍中…';
         try{
           const buf = new Uint8Array(await file.arrayBuffer());
-          // ここで fflate が使えることを想定
+          // Shift_JISデコード関数
+          const sjisDecoder = new TextDecoder('shift_jis');
           fflate.unzip(buf, {
-                // ファイル名に使うデコーダ
-                stringDecoder: (bytes) => {
-                try {
-                    // UTF-8優先、失敗したらShift_JISで解釈
-                    return new TextDecoder('utf-8').decode(bytes);
-                } catch {
-                    return new TextDecoder('shift_jis').decode(bytes);
-                }
-                }
-            }, (err, data) => {
-                if(err){ status.textContent = '解凍に失敗: ' + err; return; }
-
+            decodeFileName: (bytes) => {
+              try {
+                return sjisDecoder.decode(bytes);
+              } catch {
+                // デコード失敗時はデフォルト
+                return new TextDecoder().decode(bytes);
+              }
+            }
+          }, (err, data) => {
+            if(err){ status.textContent = '解凍に失敗: ' + err; return; }
             const entries = Object.entries(data).sort((a,b)=>a[0].localeCompare(b[0]));
             status.textContent = `展開完了：${entries.length} 件`;
             for(const [name, bytes] of entries){
@@ -92,7 +91,6 @@
         }catch(e){
           status.textContent = '解凍に失敗: ' + (e?.message||e);
         }
-      });
-    </script>
+      });    </script>
   </body>
 </html>
