--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="wrap">
       <div class="card">
-        <h1>Zip解凍（ブラウザだけで完結）</h1>
+        <h1>Zip解凍（ブラウザだけで完結あ）</h1>
         <div class="drop">
           <input id="file" type="file" accept=".zip,application/zip" />
           <div class="muted">※ファイルはサーバーに送信されません。端末内で解凍されます。</div>
